<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#0EBFE9"
    android:visibility="visible">

    <TextView
        android:id="@+id/Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/rooms"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:text="@string/gender"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="bold"
        android:typeface="sans" />

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Gender"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/Girls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toEndOf="@+id/Gender"
            android:text="@string/girls"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textSpace"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=".................." />

        <RadioButton
            android:id="@+id/boys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toStartOf="@+id/Gender"
            android:text="@string/boys"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>

    <TextView
        android:id="@+id/Food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/gender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"

        android:text="@string/food"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="bold"
        android:typeface="sans" />

    <RadioGroup
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/gender"
        android:layout_below="@+id/Food"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/veg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toEndOf="@+id/Gender"
            android:text="@string/veg"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textSpace2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="...................." />

        <RadioButton
            android:id="@+id/Nonveg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toStartOf="@+id/Gender"
            android:text="@string/non_veg"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>

    <TextView
        android:id="@+id/Wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/food"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="20dp"
        android:text="@string/internet"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="bold"
        android:typeface="sans" />

    <RadioGroup
        android:id="@+id/wifibutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/food"
        android:layout_below="@+id/Wifi"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/yeswifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toEndOf="@+id/Gender"
            android:text="@string/yes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textSpace3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="....................." />

        <RadioButton
            android:id="@+id/Nowifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toStartOf="@+id/Gender"
            android:text="@string/no"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>


    <TextView
        android:id="@+id/geyser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/Gender"
        android:layout_below="@+id/wifibutton"
        android:layout_marginTop="18dp"
        android:text="Geyser"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="bold"
        android:typeface="sans" />

    <RadioGroup
        android:id="@+id/geyserbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/wifibutton"
        android:layout_below="@+id/geyser"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/yesgeyser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toEndOf="@+id/Gender"
            android:text="@string/yes1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textSpace4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="....................." />

        <RadioButton
            android:id="@+id/Nogeyser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toStartOf="@+id/Gender"
            android:text="@string/no1"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>

    <TextView
        android:id="@+id/ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/geyserbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/air_conditioner"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="bold"
        android:typeface="sans" />

    <RadioGroup
        android:id="@+id/acbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/roombutton"
        android:layout_below="@+id/ac"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/yesac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toEndOf="@+id/Gender"
            android:text="@string/yes4"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textSpace5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="....................." />

        <RadioButton
            android:id="@+id/Noac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toStartOf="@+id/Gender"
            android:text="@string/no"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>

    <TextView
        android:id="@+id/rooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/Food"
        android:layout_below="@+id/acbutton"
        android:layout_marginTop="18dp"
        android:text="@string/room"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textStyle="bold"
        android:typeface="sans" />

    <RadioGroup
        android:id="@+id/roombutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/geyserbutton"
        android:layout_below="@+id/rooms"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/Sin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toEndOf="@+id/Gender"
            android:text="@string/single"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textSpace6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="................" />

        <RadioButton
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/food"
            android:layout_toStartOf="@+id/Gender"
            android:text="@string/double1"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>

    <Button
        android:id="@+id/submitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/roombutton"
        android:background="@drawable/button_bg_stroke"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit" />


</RelativeLayout>