<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/owner_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0EBFE9"
    android:visibility="visible">

    <Button
        android:id="@+id/search_hostel"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/search_hostel"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/sign_out"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/register_hostel"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_below="@+id/search_hostel"
        android:layout_alignStart="@+id/search_hostel" />


</RelativeLayout>